[package]
authors = ["Kewbit <kewbitxmr@protonmail.com>"]
edition = "2021"
description = "Create bindadle TCP tunnels to hidden services (.onion) over Tor"
license = "Apache-2.0"
name = "tor-tunnels"
version = "1.2.4"
repository = "https://github.com/KewbitXMR/tor-tunnels.git"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-socks = "0.5"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "tor-tunnels"
path = "src/main.rs"